[package]
name = "pebble"
version = "0.8.4"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
description = "A program for managing C2 (c2lang.org) projects. Similar to cargo, but much smaller and dumber"
license = "Fair"

[dependencies]
serde = "^1.0.4"
serde_derive = "^1.0.4"
toml = "^0.4.1"
recipe-reader = "^0.9.9"
ansi_term = "^0.9.0"
lzf = "0.3.1"
