[package]
name = "pebble"
version = "0.8.15"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
description = "A program for managing C2 (c2lang.org) projects. Similar to cargo, but much smaller and dumber"
license = "Fair"

[dependencies]
serde = "^1.0.4"
serde_derive = "^1.0.4"
toml = "^0.4.1"
recipe-reader = "0.9.11"
ansi_term = "^0.9.0"
lzf = "0.3.1"
hyper = "0.10.11"
serde_cbor = "0.6.0"
zip = "0.2.3"
walkdir = "1.0.7"
sha1 = "0.2.0"
version-compare = "0.0.4"
clap = "2.24.2"
pbr = "1.0.0"
